--- a/style.css
+++ b/style.css
@@ -233,7 +233,7 @@ header {
     color: #fff;
     width: 100%;
     background-color: #c9c9c9;
-    background-image: url('https://splashbase.s3.amazonaws.com/lifeofpix/regular/Life-of-Pix-free-stock-photos-Slate-Stone-Xeromatic-1440x953.jpg');
+    background-image: url('BG with logo.png');
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -251,7 +251,8 @@ header .header-content {
 
 header .header-content .inner h1 {
     margin-top: 0;
-    margin-bottom: 0;
+    margin-bottom: 60px;
+    color: rgba(5,5, 157, 0);
 }
 
 header .header-content .inner p {
